--- a/src/Component/main.css
+++ b/src/Component/main.css
@@ -9,6 +9,7 @@
   display: block;
 }
 .inbox {
+  
   width: 22%;
   height: Fixed (821px) px;
   top: 67px;
@@ -21,13 +22,13 @@
   margin-right: 8px;
 }
 .inbox h1 {
-  font-family: Open Sans;
-  font-size: 20px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 17px;
   font-weight: 700;
   line-height: 27.24px;
   text-align: left;
   color: #4285f4;
-  width: 112px;
+  width: 122px;
   height: 27px;
   gap: 0px;
   opacity: 0px;
@@ -37,26 +38,32 @@
 }
 .refresh-div {
   width: Hug (32px) px;
-  height: Hug (32px) px;
+  height: 32px;
   padding: 8px;
   gap: 8px;
   border-radius: 4px;
-  opacity: 0px;
+  /* opacity: 0px; */
   color: #ffffff;
   /* margin: auto; */
   background: #25262b;
-  margin-left: 110px;
+  /* margin-left: 110px; */
+   
+   display: flex;
+   margin-left: 60px;
+   margin-top: 6px;
+  
 }
+
 .select {
-  font-family: Open Sans;
-  font-size: 14px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 13px;
   font-weight: 700;
   line-height: 19.07px;
   text-align: left;
-  width: 151px;
+  width: 200px;
   height: 19px;
   gap: 0px;
-  opacity: 0px;
+  /* opacity: 0px; */
   color: #7f7f7f;
 }
 .orlando-div {
@@ -81,7 +88,7 @@
 }
 
 .search-div {
-  font-family: Inter;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 20px;
