--- a/src/pages/Home/heder.css
+++ b/src/pages/Home/heder.css
@@ -8,7 +8,7 @@
   height: 22px;
   gap: 0px;
   opacity: 0px;
-  font-family: Open Sans;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 21.79px;
@@ -58,4 +58,7 @@
   color: #9e9e9e;
   margin: auto;
   margin-top: 30px;
+}
+.time{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
