--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
     font-size: 1rem; /* base font size */
     font-weight: 500; 
 
